# SlicerBoneMorphing

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  metadata.s4ext  tox.ini
.github/: CODEOWNERS
.github/.workflows/: create-pre-release.yaml
.github/workflows/: create-pre-release.yaml
SlicerBoneMorphing/: CMakeLists.txt  SlicerBoneMorphing.py
SlicerBoneMorphing/Resources/BCPD/: bcpd_macos_arm  libbcpd.dylib  libbcpd_macos_x86_64.dylib
SlicerBoneMorphing/Resources/BCPD/exec/: bcpd_linux_x86_64  bcpd_macos_x86_64
SlicerBoneMorphing/Resources/Samples/: O35 M humerus.stl  U35 F humerus partial.stl
SlicerBoneMorphing/Resources/UI/: SlicerBoneMorphing.ui
SlicerBoneMorphing/resources/ui/: SlicerBoneMorphing.ui
SlicerBoneMorphing/src/: CMakeLists.txt  main.py
SlicerBoneMorphing/src/logic/: Constants.py  Enums.py  SlicerBoneMorphingLogic.py
SlicerBoneMorphing/src/widget/: SlicerBoneMorphingWidget.py
docs/: dev_docs.md  how-to-use.md
src/: SlicerBoneMorphing.py
src/src/logic/: Constants.py  SlicerBoneMorphingLogic.py
